hphp/test/zend/bad/ext-sockets/bug49341.php
<?php
var_dump(defined('SO_REUSEPORT'));